<resources>
    <string name="app_name">NppProject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Bài viết đã đọc</string>
    <string name="btn_Connect">Connect</string>
    <string name="btn_Delete">Xóa Tất cả</string>

    <string name="menu_home">Trang chủ</string>
    <string name="menu_video">Video</string>
    <string name="menu_news">Tin Mới</string>
    <string name="menu_world">Thế Giới</string>
    <string name="menu_business">Kinh Doanh</string>
    <string name="menu_startup">StartUP</string>
    <string name="menu_entertainment">Giải Trí</string>
    <string name="menu_sport">Thể Thao</string>
    <string name="menu_law">Luật Pháp</string>
    <string name="menu_education">Giáo Dục</string>
    <string name="menu_health">Sức Khỏe</string>
    <string name="menu_life">Cuộc Sống</string>
    <string name="menu_travel">Du Lịch</string>
    <string name="menu_science">Khoa Học</string>
    <string name="menu_digitalize">Số Hóa</string>
    <string name="menu_car">Xe Cộ</string>
    <string name="menu_comment">Bình Luận</string>
    <string name="menu_talk">Tâm Sự</string>
    <string name="menu_laugh">Cười</string>
    <string name="menu_weather">Thời Tiết</string>

    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="tv_relate">Bài Viết Liên Quan</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
